<resources>
    <string name="app_name">Vantress</string>

    <string-array name="magic_colors">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_deck">Add Deck</string>
    <string name="planeswalker">Planeswalker</string>
    <string name="creature">Creature</string>
    <string name="instant">Instant</string>
    <string name="sorcery">Sorcery</string>
    <string name="enchantment">Enchantment</string>
    <string name="artifact">Artifact</string>
    <string name="commander">Commander</string>
    <string name="land">Land</string>
    <string name="card_bg_warning">Click on a card to apply a deck background.</string>
    <string name="deck_background">Deck background</string>
    <string name="add_cards">Add Cards</string>
</resources>
